--- a/app/views/mpages/index.rhtml
+++ b/app/views/mpages/index.rhtml
@@ -1,7 +1,7 @@
 
 <%= render :partial => 'shared/admin_actions'%>
 
-<h1>MPage</h1>
+<h1>MPage (v<%= Mpage::VERSION %>)</h1>
 
 <div style='margin: 1em;'>
 <% form_remote_tag(
